--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
 		"npm": ">=6"
 	},
 	"scripts": {
-		"start": "craco start",
+		"start": "concurrently \"craco start\" \"npm run lint\"",
 		"build": "craco build",
 		"test": "craco test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"server": "json-server --watch stocks.js --port 4000",
+		"eslint": "eslint --ignore-path .eslintignore ./src",
+		"styleLint": "stylelint \"**/*.scss\" --config .stylelintrc",
+		"lint": "concurrently \"npm run eslint\" \"npm run styleLint\"",
+		"lint:fix": "concurrently \"npm run eslint --fix\" \"npm run styleLint --fix\""
 	},
 	"eslintConfig": {
 		"extends": [
@@ -42,6 +47,7 @@
 		"antd": "^4.18.2",
 		"axios": "^0.24.0",
 		"classnames": "^2.3.1",
+		"json-server": "^0.17.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-scripts": "5.0.0",
